--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -5,6 +5,27 @@
   /* text-align: center; */
 }
 
+/* width */
+::-webkit-scrollbar {
+  width: 5px;
+  height: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #cecece;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #888;
+}
+
 .logo {
   height: 6em;
   padding: 1.5em;
