--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -13,17 +13,17 @@
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #f1f1f1;
+  background: #fafafa;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #cecece;
+  background: #f1f1f1;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #888;
+  background: #e1e1e1;
 }
 
 .logo {
