--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -62,35 +62,35 @@
   color: #888;
 }
 .bg-purple{
-  background-color: #8160B7 !important;
+  background: linear-gradient(310deg, purple, indigo) !important;
   color: #ffffff !important;
 }
 .bg-purple-light{
-  background-color: #f3ecff !important;
+  background: linear-gradient(310deg, #80008033, #4b008233) !important;
 }
 .text-purple{
-  color: #8160B7 !important;
+  color: indigo !important;
 }
 .btn-purple{
-  background-color: #8160B7 !important;
-  border-color: #8160B7 !important;
+  background: linear-gradient(310deg, purple, indigo) !important;
+  border-color: indigo !important;
   color: #fff !important;
 }
 .btn-purple:hover{
-  background-color: #7852b6 !important;
+  background: linear-gradient(270deg, purple, indigo) !important;
   border-color: #7852b6 !important;
   color: #fff !important;
 }
 .btn-outline-purple{
-  border-color: #8160B7 !important;
-  color: #8160B7 !important;
+  border-color: indigo !important;
+  color: indigo !important;
 }
 .btn-outline-purple:hover{
   border-color: #6938b7 !important;
   color: #6938b7 !important;
 }
 .border-purple{
-  border-color: #8160B7 !important;
+  border-color: indigo !important;
 }
 
 /* bootstrap class changes */
@@ -107,12 +107,12 @@
   font-size: 10px !important;
 }
 .form-control:focus{
-  border-color: #8160B7 !important;
+  border-color: indigo !important;
   box-shadow: 0 0 0 0.25rem rgba(129, 96, 183, 0.25) !important;
 }
 .form-control:valid,
 .form-control:not(:placeholder-shown) {
-  border-color: #8160B7 !important;
+  border-color: indigo !important;
 }
 .form-control:invalid:not(:placeholder-shown) {
   border-color: #dc3545 !important;
